# simple_match

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-rules.cmake  simple_matchConfig.cmake  variables.cmake
include/simple_match/: from_string.hpp  regex.hpp  simple_match.hpp  some_none.hpp  utility.hpp
include/simple_match/boost/: any.hpp  lexical_cast.hpp  optional.hpp  variant.hpp
include/simple_match/boost_support/: any.hpp  lexical_cast.hpp  optional.hpp  variant.hpp
include/simple_match/implementation/: some_none.hpp
test/: CMakeLists.txt  cppcon-matching.cpp  cppcon_feedback.cpp  test.cpp
